button mobile view fixed

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@
 .nav > button {
     position: absolute;
     top: 12px;
-    right: 12px;
+    right: 1vw;
     font-size: 24px;
     outline: none;
     border: none;
